# gpu-accelerated-video-filtering

./: .gitignore  CMakeLists.txt  README.md  spec.md
src/: main.cpp
src/display/: Display.cpp  Display.h  PerformanceOverlay.cpp  PerformanceOverlay.h
src/filters/: CPUFilters.cpp  CPUFilters.h  Filter.h  GPUFilters.cu  GPUFilters.h
src/gpu/: GPUManager.cpp  GPUManager.h
src/video/: Frame.h  VideoReader.cpp  VideoReader.h
test_videos/: .gitkeep
